tests/tests/ui/update_macro_value_type_mismatch.stderr
error[E0277]: the trait bound `{integer}: Assign<std::string::String>` is not satisfied
  --> tests/ui/update_macro_value_type_mismatch.rs:17:42
   |
17 |     let _ = toasty::update!(user { name: 123 });
   |                                    ----  ^^^ the trait `Assign<std::string::String>` is not implemented for `{integer}`
   |                                    |
   |                                    required by a bound introduced by this call
   |
   = help: the following other types implement trait `Assign<T>`:
             `f32` implements `Assign<f32>`
             `f64` implements `Assign<f64>`
             `i16` implements `Assign<i16>`
             `i32` implements `Assign<i32>`
             `i64` implements `Assign<i64>`
             `i8` implements `Assign<i8>`
             `isize` implements `Assign<isize>`
             `u16` implements `Assign<u16>`
           and $N others
note: required by a bound in `UserUpdate::<__toasty_T>::name`
  --> tests/ui/update_macro_value_type_mismatch.rs:1:17
   |
 1 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `UserUpdate::<__toasty_T>::name`
...
 6 |     name: String,
   |     ---- required by a bound in this associated function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
